--- a/index.html
+++ b/index.html
@@ -442,15 +442,13 @@
         <div class="owl-carousel owl-theme owl-loaded">
           <div>
             <div class="depoimento">
-              <img src="assets/user.svg" />
+              <img src="assets/chefe-otavio.jpg" />
               <div class="depoimento-texto pl-3">
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium dolorem que laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis.
+                  É com prazer que recomendo Heloisa Bonilha. Eu gostei bastante do tempo que trabalhamos junto no Movimento Escoteiro, ela ainda como membro Juvenil, descobri que ela é uma pessoa muito valiosa para qualquer empresa. Heloisa é honesta, segura e incrivelmente dedicada é uma líder nata e proativa. Heloisa sabe verdadeiramente trabalhar em equipe, sem dúvida alguma eu recomendo, sei que ela será uma contratação positiva. Por favor sinta-se a vontade para entrar em contato comigo, através do email otavio.hasegawa@gmail.com. Ficarei feliz em ampliar minha recomendação.
                 </p>
                 <p class="name">
-                  <span>Maria da Silva</span> / Diretora da XXX
+                  <span>Otávio Hasegawa</span> / Profissional de Pesquisa de mercado
                 </p>
                 <p class="mb-0">
                   <img src="assets/quote.svg" class="quote float-right" />
@@ -563,7 +561,7 @@
           <h4 class="subtitle text-center mb-4">
             Te mandarei somente um email com todas as minhas certificações e informações importantes para nos conectarmos!
           </h4>
-          <form>
+          <form action="form/email.html">
             <div class="flex-md-grow-1 pr-md-3 pb-md-0 pb-3">
               <label for="email" class="sr-only">Password</label>
               <input
