--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
           <h4 class="subtitle text-center mb-4">
             Te mandarei somente um email com todas as minhas certificações e informações importantes para nos conectarmos!
           </h4>
-          <form action="form/email.html">
+          <form >
             <div class="flex-md-grow-1 pr-md-3 pb-md-0 pb-3">
               <label for="email" class="sr-only">Password</label>
               <input
@@ -574,14 +574,13 @@
             <div class="flex-grow-1 flex-md-grow-0">
               <button
                 type="submit"
-                class="btn btn-light button mb-3 d-md-inline d-block w-100"
+                class="btn btn-light button mb-3 d-md-inline d-block w-100" onclick="email()"
               >
                 Cadastre-se
               </button>
             </div>
           </form>
         </div>
-        
         <div class="logo py-4">
           <h2 class="title text-center">Contato</h2>
           <div class="row">
@@ -622,5 +621,7 @@
     <script src="js/isotope.pkgd.min.js"></script>
     <script src="js/magnify/jquery.magnific-popup.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/form/email.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
