--- a/index.html
+++ b/index.html
@@ -461,9 +461,7 @@
               <img src="assets/user.svg" />
               <div class="depoimento-texto pl-3">
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium dolorem que laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis.
+                  <strong>Em Construção</strong>
                 </p>
                 <p class="name">
                   <span>Maria da Silva</span> / Diretora da XXX
@@ -479,9 +477,7 @@
               <img src="assets/user.svg" />
               <div class="depoimento-texto pl-3">
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium dolorem que laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis.
+                  <strong>Em Construção</strong>
                 </p>
                 <p class="name">
                   <span>Maria da Silva</span> / Diretora da XXX
@@ -497,9 +493,7 @@
               <img src="assets/user.svg" />
               <div class="depoimento-texto pl-3">
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium dolorem que laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis.
+                  <strong>Em Construção</strong>
                 </p>
                 <p class="name">
                   <span>Maria da Silva</span> / Diretora da XXX
@@ -515,9 +509,7 @@
               <img src="assets/user.svg" />
               <div class="depoimento-texto pl-3">
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium dolorem que laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis.
+                  <strong>Em Construção</strong>
                 </p>
                 <p class="name">
                   <span>Maria da Silva</span> / Diretora da XXX
@@ -533,9 +525,7 @@
               <img src="assets/user.svg" />
               <div class="depoimento-texto pl-3">
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium dolorem que laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis.
+                  <strong>Em Construção</strong> 
                 </p>
                 <p class="name">
                   <span>Maria da Silva</span> / Diretora da XXX
