--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                   É com prazer que recomendo Heloisa Bonilha. Eu gostei bastante do tempo que trabalhamos junto no Movimento Escoteiro, ela ainda como membro Juvenil, descobri que ela é uma pessoa muito valiosa para qualquer empresa. Heloisa é honesta, segura e incrivelmente dedicada é uma líder nata e proativa. Heloisa sabe verdadeiramente trabalhar em equipe, sem dúvida alguma eu recomendo, sei que ela será uma contratação positiva. Por favor sinta-se a vontade para entrar em contato comigo, através do email otavio.hasegawa@gmail.com. Ficarei feliz em ampliar minha recomendação.
                 </p>
                 <p class="name">
-                  <span>Otávio Hasegawa</span> / Profissional de Pesquisa de mercado
+                  <a href="https://www.linkedin.com/in/otavio-hasegawa-56b58a47/" target="_blank"> <span>Otávio Hasegawa</span></a> / Profissional de Pesquisa de mercado
                 </p>
                 <p class="mb-0">
                   <img src="assets/quote.svg" class="quote float-right" />
@@ -447,13 +447,13 @@
           </div>
           <div>
             <div class="depoimento">
-              <img src="assets/user.svg" />
+              <img src="assets/luiz-carlos.jpg" />
               <div class="depoimento-texto pl-3">
                 <p>
-                  <strong>Em Construção</strong>
+                  Heloísa demonstrou proatividade e foco durante o período que trabalhamos juntos, sempre buscando aprender mais, uma ótima escolha profissional.
                 </p>
                 <p class="name">
-                  <span>Maria da Silva</span> / Diretora da XXX
+                  <a href="https://www.linkedin.com/in/luiz-carlos-pinheiro-junior-5551b142/" target="_blank"> <span>Luiz Carlos</span></a> / Coordenador no NICS
                 </p>
                 <p class="mb-0">
                   <img src="assets/quote.svg" class="quote float-right" />
