--- a/index.html
+++ b/index.html
@@ -370,11 +370,23 @@
             <a href='https://br.freepik.com/vectorjuice' target="_blank">
               <img src="assets/servicos/nics.jpg" class="img-fluid mb-2" />
             </a>
-            <a href="https://www.nics.unicamp.br/" target="_blank" id="exp"><h5 class="text-center mb-1">NICS UNICAMP</h5></a>
-            <h6 class="text-center mb-1">Responsável pelo desenvolvimento do Backend em Python de um software, de uma empresa de gestão de ativos, por Micro Serviços e confecção de testes automatizados.</h6>
+            <a href="https://www.nics.unicamp.br/" target="_blank" id="exp"><h5 class="text-center">NICS<br>UNICAMP</h5></a>
+            <div class="row grid xp-col">
+              <div class="col-lg-6 cargo">
+                <p>Bolsista</p>
+              </div>
+              <div class="col-lg-6 tempo">
+                <p>Mar/2019 - Jul/2019</p>
+              </div>
+            </div>
+            <h6 class="text-center mb-1">Responsável pelo desenvolvimento do Backend em Python de um software, por Micro Serviços e confecção de testes automatizados.</h6>
             <p class="mb-0">
-              <span class="badge bg-light text-dark">Bolsista</span>
-              <span class="badge bg-light text-dark">Mar/2019 - Jul/2019</span>
+              <span class="badge bg-light text-dark">Python</span>
+              <span class="badge bg-light text-dark">API</span>
+              <span class="badge bg-light text-dark">Flask</span>
+              <span class="badge bg-light text-dark">Banco de Dados</span>
+              <span class="badge bg-light text-dark">Swagger</span>
+              
             </p>
           </div>
           
@@ -383,10 +395,44 @@
               <img src="assets/servicos/mecatron.jpg" class="img-fluid mb-2" />
             </a>
             <a href="https://mecatron.org.br/" target="_blank" id="exp"><h5 class="text-center">MECATRON PROJETOS E CONSULTORIA</h5></a>
+            <div class="row grid xp-col">
+              <div class="col-lg-6 cargo">
+                <p>Scrum Master</p>
+              </div>
+              <div class="col-lg-6 tempo">
+                <p>Mar/2017 - Out/2018</p>
+              </div>
+            </div>
             <h6 class="text-center mb-1">Responsável pelo planejamento (prazo, preço e escopo), gerenciamento, riscos e toda parte estratégica relacionada aos projetos em execução da empresa, além de ser executora dos projetos.</h6>
             <p class="mb-0 tags">
-              <span class="badge bg-light text-dark">Scrum Master</span>
-              <span class="badge bg-light text-dark">Mar/2017 - Out/2018</span>
+              <span class="badge bg-light text-dark">Python</span>
+              <span class="badge bg-light text-dark">C</span>
+              <span class="badge bg-light text-dark">Raspberry Pi</span>
+              <span class="badge bg-light text-dark">ESP 32</span>
+              <span class="badge bg-light text-dark">Scrum</span>
+              <span class="badge bg-light text-dark">Altium / Eagle</span>
+            </p>
+          </div>
+          <div class="col-lg-4 col-6 mb-4 element-item baja apps">
+            <a href='https://br.freepik.com/vectorjuice' target="_blank">
+              <img src="assets/servicos/baja.jpg" class="img-fluid mb-2" />
+            </a>
+            <a href="https://www.instagram.com/bajaunicamp/" target="_blank" id="exp"><h5 class="text-center mb-1">BAJA SAE<br>UNICAMP</h5></a>
+            <div class="row grid xp-col">
+              <div class="col-lg-6 cargo">
+                <p>Analista de sistemas</p>
+              </div>
+              <div class="col-lg-6 tempo">
+                <p>Mar/2017 - Out/2017</p>
+              </div>
+            </div>
+            <h6 class="text-center mb-1"> Responsável pelo subsistema encarregado por aquisitar dados do carro em tempo real para monitoramento de informações vitais e para obter parâmetros relevantes para os demais subsistemas do carro, além de transmitir esses dados em tempo real através de uma telemetria.</h6>
+            <p class="mb-0">
+              <span class="badge bg-light text-dark">C</span>
+              <span class="badge bg-light text-dark">Python</span>
+              <span class="badge bg-light text-dark">Telemetria</span>
+              <span class="badge bg-light text-dark">Sensoriamento</span>
+              <span class="badge bg-light text-dark">4º Lugar - Campeonato Regional</span>
             </p>
           </div>
           <div class="col-lg-4 col-6 mb-4 element-item siner">
@@ -394,21 +440,20 @@
               <img src="assets/servicos/siner.jpg" class="img-fluid mb-2" />
             </a>
             <a href="http://www.siner.com.br/" target="_blank" id="exp"><h5 class="text-center">SINER ENGENHARIA E COMERCIO LTDA</h5></a>
+            <div class="row grid xp-col">
+              <div class="col-lg-6 cargo">
+                <p>Estagiária</p>
+              </div>
+              <div class="col-lg-6 tempo">
+                <p>Jan/2015  - Jan/2016</p>
+              </div>
+            </div>
             <h6 class="text-center mb-1">Responsável pela entrada, saída, armazenamento e conservação de materiais eletrônicos; fabricação e testes de funcionamento e qualidade de Painéis de geração, controle e distribuição de energia e confecção de desenhos técnicos mecânicos.</h6>
             <p class="mb-0 tags">
-              <span class="badge bg-light text-dark">Estagiária</span>
-              <span class="badge bg-light text-dark">Jan/2015  - Jan/2016</span>
-            </p>
-          </div>
-          <div class="col-lg-4 col-6 mb-4 element-item baja apps">
-            <a href='https://br.freepik.com/vectorjuice' target="_blank">
-              <img src="assets/servicos/baja.jpg" class="img-fluid mb-2" />
-            </a>
-            <a href="http://www.fem.unicamp.br/~baja/" target="_blank" id="exp"><h5 class="text-center mb-1">UNICAMP BAJA SAE</h5></a>
-            <h6 class="text-center mb-1">Responsável pelo subsistema encarregado por aquisitar dados embarcados ou não para monitoramento de informações vitais em tempo real e para obter parâmetros relevantes para os demais subsistemas do carro, além de transmitir esses dados em tempo real através de uma telemetria.</h6>
-            <p class="mb-0">
-              <span class="badge bg-light text-dark">Analista de sistemas eletrônicos</span>
-              <span class="badge bg-light text-dark">Mar/2017 - Out/2017</span>
+              <span class="badge bg-light text-dark">Testes Funcionais / Continuidade</span>
+              <span class="badge bg-light text-dark">Circuitos eletrônicos</span>
+              <span class="badge bg-light text-dark">SolidWorks</span>
+              <span class="badge bg-light text-dark">AutoCAD</span>
             </p>
           </div>
         </div>
