--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
               <span class="badge bg-light text-dark">Flask</span>
               <span class="badge bg-light text-dark">Banco de Dados</span>
               <span class="badge bg-light text-dark">Swagger</span>
+              <span class="badge bg-light text-dark">Git</span>
               
             </p>
           </div>
