--- a/index.html
+++ b/index.html
@@ -333,10 +333,8 @@
                 </div>
               </div>
               <div class="telefone">
-                <img src="assets/phone.svg" class="img-fluid" />
+                <a href="#contato"><img src="assets/phone.svg" class="img-fluid" /></a>
                 <div class="d-inline-block pl-3">
-                  <span>+55 (11) 99962 1252</span>
-                  <span>bonilha.heloisa@gmail.com</span>
                   Disponível de segunda a sexta, das 8h as 18h
                 </div>
               </div>
@@ -472,18 +470,35 @@
     <!--DEPOIMENTOS-->
     <div id="depoimentos" class="block">
       <div class="container">
-        <h2 class="title text-center">Recomendações</h2>
+        <h2 class="title text-center">Depoimentos</h2>
 
-        <div class="owl-carousel owl-theme owl-loaded">
+        <div class="owl-carousel owl-theme owl-loaded recomenda">
           <div>
             <div class="depoimento">
-              <img src="assets/chefe-otavio.jpg" />
+              <img src="assets/chefe-otavio.jpg"/>
               <div class="depoimento-texto pl-3">
                 <p>
                   É com prazer que recomendo Heloisa Bonilha. Eu gostei bastante do tempo que trabalhamos junto no Movimento Escoteiro, ela ainda como membro Juvenil, descobri que ela é uma pessoa muito valiosa para qualquer empresa. Heloisa é honesta, segura e incrivelmente dedicada é uma líder nata e proativa. Heloisa sabe verdadeiramente trabalhar em equipe, sem dúvida alguma eu recomendo, sei que ela será uma contratação positiva. Por favor sinta-se a vontade para entrar em contato comigo, através do email otavio.hasegawa@gmail.com. Ficarei feliz em ampliar minha recomendação.
                 </p>
                 <p class="name">
                   <a href="https://www.linkedin.com/in/otavio-hasegawa-56b58a47/" target="_blank"> <span>Otávio Hasegawa</span></a> / Profissional de Pesquisa de mercado
+                </p>
+                <p class="mb-0">
+                  <img src="assets/quote.svg" class="quote float-right" />
+                </p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="depoimento">
+              <img src="assets/mariana.jpg" />
+              <div class="depoimento-texto pl-3">
+                <p>Eu escrevo este depoimento para recomendar Heloísa para futuras oportunidades no campo da tecnologia.<br>
+                    Durante o tempo que trabalhamos juntas, Heloísa se destacou pelo seu código bem estruturado e entregas dos desafios, sempre demonstrando capacidade rápida de aprendizado. Sempre demonstrando um trabalho ético e de qualidade, Heloísa demonstrou excelência na Trilha de Java do Campinas Tech Talents e trabalhar com ela foi um prazer, tanto para mim quanto para a equipe.<br>
+                    Estou convicta de que Heloísa pode desempenhar com maestria qualquer atividade no que tange desenvolvimento de softwares e firmwares. Por isso, a recomendo para futuras oportunidades profissionais nestes setores.
+                </p>
+                <p class="name">
+                  <a href="https://www.linkedin.com/in/mariana-mian-56b80210/" target="_blank"> <span>Mariana Mian</span></a> / IT Executive Manager na Vivo
                 </p>
                 <p class="mb-0">
                   <img src="assets/quote.svg" class="quote float-right" />
@@ -500,22 +515,6 @@
                 </p>
                 <p class="name">
                   <a href="https://www.linkedin.com/in/luiz-carlos-pinheiro-junior-5551b142/" target="_blank"> <span>Luiz Carlos</span></a> / Coordenador no NICS
-                </p>
-                <p class="mb-0">
-                  <img src="assets/quote.svg" class="quote float-right" />
-                </p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="depoimento">
-              <img src="assets/user.svg" />
-              <div class="depoimento-texto pl-3">
-                <p>
-                  <strong>Em Construção</strong>
-                </p>
-                <p class="name">
-                  <span>Maria da Silva</span> / Diretora da XXX
                 </p>
                 <p class="mb-0">
                   <img src="assets/quote.svg" class="quote float-right" />
