--- a/index.html
+++ b/index.html
@@ -359,8 +359,9 @@
           </button>
           <button type="button" data-filter=".nics">NICS UNICAMP</button>
           <button type="button" data-filter=".mecatron">MECATRON PROJETOS E CONSULTORIA</button>
-          <button type="button" data-filter=".siner">SINER ENGENHARIA E COMERCIO LTDA</button>
           <button type="button" data-filter=".baja">UNICAMP BAJA SAE</button>
+          <button type="button" data-filter=".siner">SINER ENGENHARIA E COMERCIO LTDA</button>
+          
         </div>
 
         <div class="row grid">
@@ -369,7 +370,7 @@
               <img src="assets/servicos/nics.jpg" class="img-fluid mb-2" />
             </a>
             <a href="https://www.nics.unicamp.br/" target="_blank" id="exp"><h5 class="text-center">NICS<br>UNICAMP</h5></a>
-            <div class="row grid xp-col">
+            <div class="row grid xp-col mb-0">
               <div class="col-lg-6 cargo">
                 <p>Bolsista</p>
               </div>
@@ -394,7 +395,7 @@
               <img src="assets/servicos/mecatron.jpg" class="img-fluid mb-2" />
             </a>
             <a href="https://mecatron.org.br/" target="_blank" id="exp"><h5 class="text-center">MECATRON PROJETOS E CONSULTORIA</h5></a>
-            <div class="row grid xp-col">
+            <div class="row grid xp-col mb-0">
               <div class="col-lg-6 cargo">
                 <p>Scrum Master</p>
               </div>
@@ -417,7 +418,7 @@
               <img src="assets/servicos/baja.jpg" class="img-fluid mb-2" />
             </a>
             <a href="https://www.instagram.com/bajaunicamp/" target="_blank" id="exp"><h5 class="text-center mb-1">BAJA SAE<br>UNICAMP</h5></a>
-            <div class="row grid xp-col">
+            <div class="row grid xp-col mb-0">
               <div class="col-lg-6 cargo">
                 <p>Analista de sistemas</p>
               </div>
@@ -439,11 +440,11 @@
               <img src="assets/servicos/siner.jpg" class="img-fluid mb-2" />
             </a>
             <a href="http://www.siner.com.br/" target="_blank" id="exp"><h5 class="text-center">SINER ENGENHARIA E COMERCIO LTDA</h5></a>
-            <div class="row grid xp-col">
+            <div class="row grid xp-col mb-0">
               <div class="col-lg-6 cargo">
                 <p>Estagiária</p>
               </div>
-              <div class="col-lg-6 tempo">
+              <div class="col-lg-6 tempo ">
                 <p>Jan/2015  - Jan/2016</p>
               </div>
             </div>
@@ -451,6 +452,7 @@
             <p class="mb-0 tags">
               <span class="badge bg-light text-dark">Testes Funcionais / Continuidade</span>
               <span class="badge bg-light text-dark">Circuitos eletrônicos</span>
+              <span class="badge bg-light text-dark">Redes de Distribuição de Energia</span>
               <span class="badge bg-light text-dark">SolidWorks</span>
               <span class="badge bg-light text-dark">AutoCAD</span>
             </p>
@@ -478,7 +480,7 @@
               <img src="assets/chefe-otavio.jpg"/>
               <div class="depoimento-texto pl-3">
                 <p>
-                  É com prazer que recomendo Heloisa Bonilha. Eu gostei bastante do tempo que trabalhamos junto no Movimento Escoteiro, ela ainda como membro Juvenil, descobri que ela é uma pessoa muito valiosa para qualquer empresa. Heloisa é honesta, segura e incrivelmente dedicada é uma líder nata e proativa. Heloisa sabe verdadeiramente trabalhar em equipe, sem dúvida alguma eu recomendo, sei que ela será uma contratação positiva. Por favor sinta-se a vontade para entrar em contato comigo, através do email otavio.hasegawa@gmail.com. Ficarei feliz em ampliar minha recomendação.
+                  É com prazer que recomendo Heloisa Bonilha. Eu gostei bastante do tempo que trabalhamos junto no Movimento Escoteiro, ela ainda como membro Juvenil, descobri que ela é uma pessoa muito valiosa para qualquer empresa. Heloisa é <strong>honesta</strong>, <strong>segura</strong>  e incrivelmente <strong>dedicada</strong> é uma <strong>líder nata</strong> e <strong>proativa</strong>. Heloisa sabe verdadeiramente trabalhar em equipe, sem dúvida alguma eu recomendo, sei que ela será uma <strong>contratação positiva</strong>. Por favor sinta-se a vontade para entrar em contato comigo, através do email otavio.hasegawa@gmail.com. Ficarei feliz em ampliar minha recomendação.
                 </p>
                 <p class="name">
                   <a href="https://www.linkedin.com/in/otavio-hasegawa-56b58a47/" target="_blank"> <span>Otávio Hasegawa</span></a> / Profissional de Pesquisa de mercado
@@ -494,8 +496,8 @@
               <img src="assets/mariana.jpg" />
               <div class="depoimento-texto pl-3">
                 <p>Eu escrevo este depoimento para recomendar Heloísa para futuras oportunidades no campo da tecnologia.<br>
-                    Durante o tempo que trabalhamos juntas, Heloísa se destacou pelo seu código bem estruturado e entregas dos desafios, sempre demonstrando capacidade rápida de aprendizado. Sempre demonstrando um trabalho ético e de qualidade, Heloísa demonstrou excelência na Trilha de Java do Campinas Tech Talents e trabalhar com ela foi um prazer, tanto para mim quanto para a equipe.<br>
-                    Estou convicta de que Heloísa pode desempenhar com maestria qualquer atividade no que tange desenvolvimento de softwares e firmwares. Por isso, a recomendo para futuras oportunidades profissionais nestes setores.
+                    Durante o tempo que trabalhamos juntas, Heloísa se destacou pelo seu <strong>código bem estruturado</strong> e entregas dos desafios, sempre demonstrando capacidade <strong>rápida de aprendizado</strong>. Sempre demonstrando um trabalho <strong>ético</strong> e de <strong>qualidade</strong>, Heloísa demonstrou excelência na Trilha de <strong>Java</strong> do Campinas Tech Talents e trabalhar com ela foi um prazer, tanto para mim quanto para a equipe.<br>
+                    Estou convicta de que Heloísa pode desempenhar com maestria qualquer atividade no que tange <strong>desenvolvimento de softwares</strong> e firmwares. Por isso, a recomendo para futuras oportunidades profissionais nestes setores.
                 </p>
                 <p class="name">
                   <a href="https://www.linkedin.com/in/mariana-mian-56b80210/" target="_blank"> <span>Mariana Mian</span></a> / IT Executive Manager na Vivo
@@ -511,7 +513,7 @@
               <img src="assets/luiz-carlos.jpg" />
               <div class="depoimento-texto pl-3">
                 <p>
-                  Heloísa demonstrou proatividade e foco durante o período que trabalhamos juntos, sempre buscando aprender mais, uma ótima escolha profissional.
+                  Heloísa demonstrou proatividade e foco durante o período que trabalhamos juntos, sempre buscando aprender mais, uma <strong>ótima escolha profissional.</strong> 
                 </p>
                 <p class="name">
                   <a href="https://www.linkedin.com/in/luiz-carlos-pinheiro-junior-5551b142/" target="_blank"> <span>Luiz Carlos</span></a> / Coordenador no NICS
