--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       href="https://www.dafont.com/pt/libras-black-2020.font"
       rel="stylesheet"
     />
-    
-
+    <link rel="shortcut icon" href="assets/h.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/owl/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/magnific-popup.css" />
