--- a/index.html
+++ b/index.html
@@ -470,112 +470,78 @@
 
     <!--DEPOIMENTOS-->
     <div id="depoimentos" class="block">
-      <div class="container">
+      <div class="container recomenda ">
         <h2 class="title text-center">Depoimentos</h2>
-
-        <div class="owl-carousel owl-theme owl-loaded recomenda">
-          <div>
-            <div class="depoimento">
-              <img src="assets/chefe-otavio.jpg"/>
-              <div class="depoimento-texto pl-3">
-                <p>
-                  É com prazer que recomendo Heloisa Bonilha. Eu gostei bastante do tempo que trabalhamos junto no Movimento Escoteiro, ela ainda como membro Juvenil, descobri que ela é uma pessoa muito valiosa para qualquer empresa. Heloisa é <strong>honesta</strong>, <strong>segura</strong>  e incrivelmente <strong>dedicada</strong> é uma <strong>líder nata</strong> e <strong>proativa</strong>. Heloisa sabe verdadeiramente trabalhar em equipe, sem dúvida alguma eu recomendo, sei que ela será uma <strong>contratação positiva</strong>. Por favor sinta-se a vontade para entrar em contato comigo, através do email otavio.hasegawa@gmail.com. Ficarei feliz em ampliar minha recomendação.
-                </p>
-                <p class="name">
-                  <a href="https://www.linkedin.com/in/otavio-hasegawa-56b58a47/" target="_blank"> <span>Otávio Hasegawa</span></a> / Profissional de Pesquisa de mercado
-                </p>
-                <p class="mb-0">
-                  <img src="assets/quote.svg" class="quote float-right" />
-                </p>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="depoimento">
+                <img src="assets/chefe-otavio.jpg"/>
+                <div class="depoimento-texto pl-3">
+                  <p>
+                    É com prazer que recomendo Heloisa Bonilha. Eu gostei bastante do tempo que trabalhamos junto no Movimento Escoteiro, ela ainda como membro Juvenil, descobri que ela é uma pessoa muito valiosa para qualquer empresa. Heloisa é <strong>honesta</strong>, <strong>segura</strong>  e incrivelmente <strong>dedicada</strong> é uma <strong>líder nata</strong> e <strong>proativa</strong>. Heloisa sabe verdadeiramente trabalhar em equipe, sem dúvida alguma eu recomendo, sei que ela será uma <strong>contratação positiva</strong>. Por favor sinta-se a vontade para entrar em contato comigo, através do email otavio.hasegawa@gmail.com. Ficarei feliz em ampliar minha recomendação.
+                  </p>
+                  <p class="name">
+                    <a href="https://www.linkedin.com/in/otavio-hasegawa-56b58a47/" target="_blank"> <span>Otávio Hasegawa</span></a> / Profissional de Pesquisa de mercado
+                  </p>
+                  <p class="mb-0">
+                    <img src="assets/quote.svg" class="quote float-right" />
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="depoimento">
+                <img src="assets/mariana.jpg" />
+                <div class="depoimento-texto pl-3">
+                  <p>Eu escrevo este depoimento para recomendar Heloísa para futuras oportunidades no campo da tecnologia.<br>
+                      Durante o tempo que trabalhamos juntas, Heloísa se destacou pelo seu <strong>código bem estruturado</strong> e entregas dos desafios, sempre demonstrando capacidade <strong>rápida de aprendizado</strong>. Sempre demonstrando um trabalho <strong>ético</strong> e de <strong>qualidade</strong>, Heloísa demonstrou excelência na Trilha de <strong>Java</strong> do Campinas Tech Talents e trabalhar com ela foi um prazer, tanto para mim quanto para a equipe.<br>
+                      Estou convicta de que Heloísa pode desempenhar com maestria qualquer atividade no que tange <strong>desenvolvimento de softwares</strong> e firmwares. Por isso, a recomendo para futuras oportunidades profissionais nestes setores.
+                  </p>
+                  <p class="name">
+                    <a href="https://www.linkedin.com/in/mariana-mian-56b80210/" target="_blank"> <span>Mariana Mian</span></a> / IT Executive Manager na Vivo
+                  </p>
+                  <p class="mb-0">
+                    <img src="assets/quote.svg" class="quote float-right" />
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="depoimento">
+                <img src="assets/luiz-carlos.jpg" />
+                <div class="depoimento-texto pl-3">
+                  <p>
+                    Heloísa demonstrou proatividade e foco durante o período que trabalhamos juntos, sempre buscando aprender mais, uma <strong>ótima escolha profissional.</strong> 
+                  </p>
+                  <p class="name">
+                    <a href="https://www.linkedin.com/in/luiz-carlos-pinheiro-junior-5551b142/" target="_blank"> <span>Luiz Carlos</span></a> / Coordenador no NICS
+                  </p>
+                  <p class="mb-0">
+                    <img src="assets/quote.svg" class="quote float-right" />
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-          <div>
-            <div class="depoimento">
-              <img src="assets/mariana.jpg" />
-              <div class="depoimento-texto pl-3">
-                <p>Eu escrevo este depoimento para recomendar Heloísa para futuras oportunidades no campo da tecnologia.<br>
-                    Durante o tempo que trabalhamos juntas, Heloísa se destacou pelo seu <strong>código bem estruturado</strong> e entregas dos desafios, sempre demonstrando capacidade <strong>rápida de aprendizado</strong>. Sempre demonstrando um trabalho <strong>ético</strong> e de <strong>qualidade</strong>, Heloísa demonstrou excelência na Trilha de <strong>Java</strong> do Campinas Tech Talents e trabalhar com ela foi um prazer, tanto para mim quanto para a equipe.<br>
-                    Estou convicta de que Heloísa pode desempenhar com maestria qualquer atividade no que tange <strong>desenvolvimento de softwares</strong> e firmwares. Por isso, a recomendo para futuras oportunidades profissionais nestes setores.
-                </p>
-                <p class="name">
-                  <a href="https://www.linkedin.com/in/mariana-mian-56b80210/" target="_blank"> <span>Mariana Mian</span></a> / IT Executive Manager na Vivo
-                </p>
-                <p class="mb-0">
-                  <img src="assets/quote.svg" class="quote float-right" />
-                </p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="depoimento">
-              <img src="assets/luiz-carlos.jpg" />
-              <div class="depoimento-texto pl-3">
-                <p>
-                  Heloísa demonstrou proatividade e foco durante o período que trabalhamos juntos, sempre buscando aprender mais, uma <strong>ótima escolha profissional.</strong> 
-                </p>
-                <p class="name">
-                  <a href="https://www.linkedin.com/in/luiz-carlos-pinheiro-junior-5551b142/" target="_blank"> <span>Luiz Carlos</span></a> / Coordenador no NICS
-                </p>
-                <p class="mb-0">
-                  <img src="assets/quote.svg" class="quote float-right" />
-                </p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="depoimento">
-              <img src="assets/user.svg" />
-              <div class="depoimento-texto pl-3">
-                <p>
-                  <strong>Em Construção</strong>
-                </p>
-                <p class="name">
-                  <span>Maria da Silva</span> / Diretora da XXX
-                </p>
-                <p class="mb-0">
-                  <img src="assets/quote.svg" class="quote float-right" />
-                </p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="depoimento">
-              <img src="assets/user.svg" />
-              <div class="depoimento-texto pl-3">
-                <p>
-                  <strong>Em Construção</strong>
-                </p>
-                <p class="name">
-                  <span>Maria da Silva</span> / Diretora da XXX
-                </p>
-                <p class="mb-0">
-                  <img src="assets/quote.svg" class="quote float-right" />
-                </p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="depoimento">
-              <img src="assets/user.svg" />
-              <div class="depoimento-texto pl-3">
-                <p>
-                  <strong>Em Construção</strong> 
-                </p>
-                <p class="name">
-                  <span>Maria da Silva</span> / Diretora da XXX
-                </p>
-                <p class="mb-0">
-                  <img src="assets/quote.svg" class="quote float-right" />
-                </p>
-              </div>
-            </div>
-          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Próximo</span>
+          </a>
         </div>
+
       </div>
     </div>
-    <!--//DEPOIMENTOS-->
-
+    
     <!--FOOTER-->
     
     <footer id="contato">
