nova formação e logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           class="navbar navbar-expand-lg navbar-light justify-content-between"
         >
           <a class="navbar-brand" href="#">
-            <img src="assets/logo.svg" class="img-fluid" />
+            <img src="assets/h.svg" class="img-fluid" />
           </a>
           <button
             class="navbar-toggler"
@@ -149,7 +149,7 @@
           Aprendizado contínuo
         </h4>
         <div class="row">
-          <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
             <a href="https://www.fem.unicamp.br/index.php/pt-br/engenharia-de-controle-automacao" target="_blank" class="destaque">
               <div class="img-container mb-3">
                 <img src="assets/unicamp.svg" class="img-fluid" />
@@ -160,7 +160,7 @@
               </p>
             </a>
           </div>
-          <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
             <a href="http://campinas.tech/campinas-tech-talents/" target="_blank" class="destaque">
               <div class="img-container mb-3">
                 <img src="assets/ctt.svg" class="img-fluid" />
@@ -171,7 +171,18 @@
               </p>
             </a>
           </div>
-          <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
+            <a href="https://www.mundosenai.com.br/profissoes/administrador-de-banco-de-dados/" target="_blank" class="destaque">
+              <div class="img-container mb-3">
+                <img src="assets/senai.svg" class="img-fluid" />
+              </div>
+              <h5 class="text-uppercase">Administrador de Banco de Dados</h5>
+              <p class="mb-0">
+                SENAI – Conclusão em Julho/2021.
+              </p>
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
             <a href="https://fieb.edu.br/curso/eletroeletronica/" target="_blank" class="destaque">
               <div class="img-container mb-3">
                 <img src="assets/itb.svg" class="img-fluid" />
@@ -182,7 +193,7 @@
               </p>
             </a>
           </div>
-          <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 ">
             <a href="https://academiadelibras.com/?src=dwbrand" target="_blank" class="destaque">
               <div class="img-container mb-3">
                 <img src="assets/libras.svg" class="img-fluid" />
@@ -576,7 +587,7 @@
           <h2 class="title text-center">Contato</h2>
           <div class="row">
             <div class="col-md-6 align-self-center text-md-left text-center">
-              <img src="assets/logo.svg" class="img-fluid" />
+              <img src="assets/h.svg" class="img-fluid" />
             </div>
             <div class="col-md-6 align-self-center text-right">
               <ul>
