--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <a href='https://br.freepik.com/vectorjuice' target="_blank">
               <img src="assets/servicos/dipsie.jpg" class="img-fluid mb-2" />
             </a>
-            <a href="https://dipsie.com.br/" target="_blank" id="exp"><h5 class="text-center">DIPSIE<br>Solutions</h5></a>
+            <a href="https://dipsie.com.br/" target="_blank" id="exp"><h5 class="text-center">DIPSIE<br>SOLUTIONS</h5></a>
             <div class="row grid xp-col mb-0">
               <div class="col-lg-6 cargo">
                 <p>Programadora de Sistemas Pleno</p>
