--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                 <p>Junho/2021 - Atual</p>
               </div>
             </div>
-            <h6 class="text-center mb-1">Responsável pelo desenvolvimento e gerenciamento do sistema de software CITECT SCADA fazendo a tratativa e gerenciamento dos dados coletados em campo por CLPs Schneider</h6>
+            <h6 class="text-center mb-1">Responsável pelo desenvolvimento e gerenciamento do sistema de Software e Projetos de Tratamento e Distribuição de Água, atuando desde a Programação de CLP até o projeto do Supervisório CITECT SCADA, fazendo a tratativa e gerenciamento dos dados coletados em campos.</h6>
             <p class="mb-0">
               <span class="badge bg-light text-dark">CITECT SCADA</span>
               <span class="badge bg-light text-dark">CICODE</span>
@@ -705,7 +705,9 @@
         var valor = String(document.getElementById('email_input').value);
         valor;
         Email.send({
-        SecureToken : "7df8c869-918d-49e3-943e-aa32cec49941",
+        Host : "smtp.elasticemail.com",
+        Username : "heloisa.porfavor.nao.responder@gmail.com",
+        Password : "8E283953D77A4965301FB2CDD9D0E3748459",
         To : valor,
         From : "heloisa.porfavor.nao.responder@gmail.com",
         Subject : "Currículo - Heloísa Bonilha",
