--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
           <div
             class="col-md-6 align-self-center order-md-2 order-1 mb-md-0 mb-4"
           >
-            <h2 class="title">Software Developer com foco em Back-end</h2>
+            <h2 class="title">Software Developer Full Stack</h2>
             <h4 class="subtitle">
-              Qualidade no desenvolvimento back-end dos mais diversos softwares e firmwares 
+              Qualidade no desenvolvimento full stack dos mais diversos softwares e firmwares 
             </h4>
             <div class="row">
               <div
@@ -114,8 +114,8 @@
               >
                 <span>Competências Técnicas</span>
                 <p>
-                  Desenvolvimento de projetos de software e firmware e projetos eletroeletrônicos, ênfase nas Linguagens Java, Python, C, HTML, CSS, JavaScript, Ladder e Matlab;<br/>
-                  Domínio sobre Manutenção Industrial, Diagramas Elétricos, Testes Funcionais, Confecções de placas de circuito impresso e Conhecimento em microcontroladores
+                    Desenvolvimento de projetos de software e firmware e projetos eletroeletrônicos, ênfase nas Linguagens C#, Java, Python, C, HTML, CSS, JavaScript, Ladder e Matlab;<br />
+                    Domínio em desenvolvimento de sistemas, manutenção de código, criação de diagramas lógicos, realização de testes de software, desenvolvimento de sistemas IOT
                 </p>
               </div>
               <div
